Fixed first blur alignment

--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -92,7 +92,7 @@
         position: relative;
         & > .text-counter {
           position: absolute;
-          left: 85%;
+          left: 80%;
           top: 88%;
 
           @media screen and (min-width: 810px) {
