--- a/src/styles/components/_blurs.scss
+++ b/src/styles/components/_blurs.scss
@@ -8,7 +8,7 @@
     
     &.one {
         left: 15%;
-        height: 200px;
+        height: 150px;
         width: 200px;
         background-color: #82FFD2;
         opacity: 30%;
